# lapresse-tui

./: .gitignore  AGENTS.md  Cargo.toml  README.md  demo.tape  renovate.json
.github/workflows/: ci.yml  release.yml
.planning/: PLAN.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: CONTEXT.md
.planning/phases/02-core-navigation/: 02-CONTEXT.md  02-DISCUSSION-LOG.md
.planning/phases/03-scraping-pipeline/: 03-CONTEXT.md  03-DISCUSSION-LOG.md
.planning/phases/99-refactor/: 99-01-PLAN.md  99-02-PLAN.md  99-03-PLAN.md  99-04-PLAN.md  99-05-PLAN.md  99-06-PLAN.md  99-07-PLAN.md  99-08-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
migrations/: V1__initial_schema.sql  V2__add_content_stats.sql
notebooks/: lapresse_analysis.py
src/: app.rs  db.rs  main.rs  sync.rs  ui.rs
src/app/: handlers.rs  image_loader.rs  mod.rs
src/db/: mod.rs  types.rs
src/sync/: download.rs  mod.rs  progress.rs  scraping.rs
src/ui/: article_list.rs  article_reader.rs  calendar.rs  help.rs  mod.rs  search.rs
