[package]
name = "lpresse"
version = "0.1.0"
edition = "2024"
description = "Terminal-based La Presse archive reader with inline image rendering"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
rusqlite = { version = "0.39", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
time = "0.3"
