[package]
name = "lapresse-tui"
version = "0.1.0"
edition = "2024"
description = "Terminal-based La Presse archive reader with inline image rendering"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
ratatui-image = { version = "10.0", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25"
rusqlite = { version = "0.39", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "6"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13", features = ["cookies"] }
scraper = "0.26"
url = "2"
